--- a/index.html
+++ b/index.html
@@ -467,23 +467,20 @@
             formData.append('api_key', apiKey);
 
             try {
-                const response = await fetch(`${API_BASE}/api/initialize`, {
-                    method: 'POST',
-                    body: formData
-                });
+               const response = await fetch(`${API_BASE}/api/initialize`, { method: 'POST', body: formData });
 
-                const result = await response.json();
+                const text = await response.text();
+                let result;
+                try { result = JSON.parse(text); } 
+                catch { result = { success: false, error: text }; }
 
-                 if (result.success) {
-                    document.getElementById('setupSection').classList.remove('active');
-                    document.getElementById('chatSection').classList.add('active');
+                console.log("INIT", response.status, result);
 
-                    await updatePlaylist(); // run once immediately
-
-                    if (!playlistInterval) {
-                    playlistInterval = setInterval(updatePlaylist, 2000);
-                    }
+                if (!response.ok || !result.success) {
+                alert("Init failed: " + (result.error || response.status));
+                return;
                 }
+
             } catch (error) {
                 alert('Connection error: ' + error.message);
             }
