--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 <body>
     <div class="app-container">
         <div class="sidebar">
-            <div class="logo">♫ Playlist DJ</div>
+            <div class="logo">♫ Playlist SSDJ</div>
             
             <div class="playlist-section">
                 <h3>📻 Your Playlist</h3>
