--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         </div>
     </div>
 
-    <script>
+    <script src="/app.js">
         let currentRecommendations = [];
         const API_BASE = "https://project-spotify-production.up.railway.app";
         let playlistInterval = null;
