--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
   <script>
     let currentRecommendations = [];
-    const API_BASE = ""; // ✅ same domain: https://project-spotify-production.up.railway.app
+    const API_BASE = "https://project-spotify-production.up.railway.app"; // ✅ same domain: https://project-spotify-production.up.railway.app
 
     async function initializeApp() {
       const csvFile = document.getElementById("csvFile").files[0];
